--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>Spil oversigt</title>
     <link rel="stylesheet" href="app.css" />
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
-    <!--luckiest guy font-->
-    <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
+    <!--luckiest guy og poppins font-->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet">
   </head>
 
   <body>
@@ -38,23 +40,10 @@
             <select id="sort-select">
               <option value="none">Ingen sortering</option>
               <option value="title">Titel (A-Å)</option>
-              <option value="year">År (nyeste først)</option>
               <option value="rating">Rating (højeste først)</option>
             </select>
           </div>
         </div>
-
-        <!-- Nederste række: År og Rating ranges -->
-        <div class="filter-row-ranges">
-          <!-- År range filter -->
-          <div class="filter-group range-group">
-            <label class="range-label"> Udgivelsesår</label>
-            <div class="range-inputs">
-              <input type="number" id="year-from" placeholder="1990" min="1900" max="2030" />
-              <span class="range-separator">→</span>
-              <input type="number" id="year-to" placeholder="2025" min="1900" max="2030" />
-            </div>
-          </div>
 
           <!-- Rating range filter -->
           <div class="filter-group range-group">
@@ -69,7 +58,7 @@
           <!-- Ryd alle filtre knap -->
           <button id="clear-filters" class="clear-btn">
             <span class="btn-icon">🗑️</span>
-            <span class="btn-text">Ryd filtre</span>
+            <span class="btn-text">Nulstil filtre</span>
           </button>
         </div>
       </section>
