--- a/index.html
+++ b/index.html
@@ -6,80 +6,82 @@
     <title>Spil oversigt</title>
     <link rel="stylesheet" href="app.css" />
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
-    <!--luckiest guy og poppins font-->
+    <!-- Google Fonts: Luckiest Guy & Poppins -->
     <link
       href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-      rel="stylesheet">
+      rel="stylesheet"
+    />
   </head>
 
   <body>
-    <header>
-      <h1>Brætspils Oversigt</h1>
-    </header>
-
     <main>
-      <!-- Filter bar med alle filtreringsmuligheder -->
+      <!-- Filterbar -->
       <section class="filterbar">
-        <!-- Øverste række: Søg og genre -->
-         
-        <section class="filterbar-top">
-        <!--Logo-->
+        <!-- Logo (venstre) -->
         <div class="logo">
-          <img src="img/spilcafe.logo.webp" alt="spilcaféen logo">
+          <img src="img/spilcafe.logo.webp" alt="Spilcaféen logo" />
         </div>
 
-        <!--søgefelt-->
-        <div class="filter-row-main">
+        <!-- Filterbar Top -->
+        <div class="filterbar-top filter-row-main">
           <div class="filter-group search-group">
-            <label for="search-input"> Søg</label>
-            <input type="text" id="search-input" placeholder="Søg efter et spil..." />
+            <label for="search-input">Søg</label>
+            <input type="text" id="search-input" placeholder="🔍Søg" />
           </div>
-        </section>
+        </div>
 
-        <section class="filterbar-bund">
-          <!--Kategori-->
+        <!-- Filterbar bund -->
+        <div class="filterbar-bund">
           <div class="filter-group">
-            <label for="genre-select"> Kategori</label>
+            <label for="genre-select">Kategori</label>
             <select id="genre-select">
               <option value="all">Alle kategorier</option>
-              <!-- Kategorier indsættes dynamisk via JavaScript -->
             </select>
-
-            <!--Sortering-->
           </div>
+
           <div class="filter-group">
-            <label for="sort-select"> Sortering</label>
+            <label for="sort-select">Sortér</label>
             <select id="sort-select">
-              <option value="none">Ingen sortering</option>
-              <option value="title">Titel (A-Å)</option>
+              <option value="none">Sortér</option>
+              <option value="title">Titel (A–Å)</option>
               <option value="rating">Rating (højeste først)</option>
             </select>
           </div>
-          </section>
         </div>
 
+        <!-- Rating range filter -->
 
-          <!-- Rating range filter -->
-           <!--
-          <div class="filter-group range-group">
-            <label class="range-label">⭐ Rating</label>
-            <div class="range-inputs">
-              <input type="number" id="rating-from" placeholder="0.0" min="0" max="10" step="0.1" />
-              <span class="range-separator">→</span>
-              <input type="number" id="rating-to" placeholder="10.0" min="0" max="10" step="0.1" />
-            </div>
+        <div class="filter-group range-group">
+          <label class="range-label">⭐ Rating</label>
+          <div class="range-inputs">
+            <input
+              type="number"
+              id="rating-from"
+              placeholder="0.0"
+              min="0"
+              max="10"
+              step="0.1"
+            />
+            <span class="range-separator">→</span>
+            <input
+              type="number"
+              id="rating-to"
+              placeholder="10.0"
+              min="0"
+              max="10"
+              step="0.1"
+            />
           </div>
-        -->
-          <!-- Ryd alle filtre knap -->
-          <button id="clear-filters" class="clear-btn">
-            <span class="btn-icon">🗑️</span>
-            <span class="btn-text">Nulstil filtre</span>
-          </button>
         </div>
 
+        <!-- Nulstil-knap -->
+        <button id="clear-filters" class="clear-btn" type="button">
+          <span class="btn-icon">🗑️</span>
+          <span class="btn-text">Nulstil filtre</span>
+        </button>
       </section>
 
-      <!-- spil grid -->
+      <!-- Spil grid -->
       <section id="game-list" class="game-grid">
         <!-- spil vil blive indsat her dynamisk -->
       </section>
@@ -87,16 +89,14 @@
 
     <!-- Footer -->
     <footer>
-      <p>© RACE - Rasmus Cederdorff</p>
+      <p>© GRUPPEN MED MEST SWAG</p>
     </footer>
 
     <!-- Game Detail Modal -->
     <dialog id="game-dialog">
       <form method="dialog">
-        <button id="close-dialog" aria-label="Close">✕</button>
-        <div id="dialog-content">
-          <!-- Game details will be injected here via JavaScript -->
-        </div>
+        <button id="close-dialog" aria-label="Luk">✕</button>
+        <div id="dialog-content"></div>
       </form>
     </dialog>
 
