--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="filterbar-top filter-row-main">
           <div class="filter-group search-group">
             <label for="search-input">Søg</label>
-            <input type="text" id="search-input" placeholder="🔍Søg" />
+            <input type="text" id="search-input" placeholder="🔍 Søg" />
           </div>
         </div>
 
@@ -50,28 +50,16 @@
         </div>
 
         <!-- Rating range filter -->
-
+        <!--
         <div class="filter-group range-group">
           <label class="range-label">⭐ Rating</label>
-          <div class="range-inputs">
-            <input
-              type="number"
-              id="rating-from"
-              placeholder="0.0"
-              min="0"
-              max="10"
-              step="0.1"
-            />
-            <span class="range-separator">→</span>
-            <input
-              type="number"
-              id="rating-to"
-              placeholder="10.0"
-              min="0"
-              max="10"
-              step="0.1"
-            />
+            <div class="range-inputs">
+              <input type="number" id="rating-from" placeholder="0.0" min="0" max="10" step="0.1" />
+              <span class="range-separator">→</span>
+              <input type="number" id="rating-to" placeholder="10.0" min="0" max="10" step="0.1" />
+            </div>
           </div>
+          -->
         </div>
 
         <!-- Nulstil-knap -->
