--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
 
   <body>
     <main>
+
       <!-- Filterbar -->
       <section class="filterbar">
+        
         <!-- Logo (venstre) -->
         <div class="logo">
           <img src="img/spilcafe.logo.webp" alt="Spilcaféen logo" />
@@ -31,6 +33,7 @@
         </div>
 
         <!-- Filterbar bund -->
+         <!--Kategori-->
         <div class="filterbar-bund">
           <div class="filter-group">
             <label for="genre-select">Kategori</label>
@@ -39,27 +42,14 @@
             </select>
           </div>
 
+          <!--Sortering-->
           <div class="filter-group">
             <label for="sort-select">Sortér</label>
             <select id="sort-select">
-              <option value="none">Sortér</option>
+              <option value="none">Ingen Sortering</option>
               <option value="title">Titel (A–Å)</option>
-              <option value="rating">Rating (højeste først)</option>
             </select>
           </div>
-        </div>
-
-        <!-- Rating range filter -->
-        <!--
-        <div class="filter-group range-group">
-          <label class="range-label">⭐ Rating</label>
-            <div class="range-inputs">
-              <input type="number" id="rating-from" placeholder="0.0" min="0" max="10" step="0.1" />
-              <span class="range-separator">→</span>
-              <input type="number" id="rating-to" placeholder="10.0" min="0" max="10" step="0.1" />
-            </div>
-          </div>
-          -->
         </div>
 
         <!-- Nulstil-knap -->
@@ -71,6 +61,7 @@
 
       <!-- Spil grid -->
       <section id="game-list" class="game-grid">
+
         <!-- spil vil blive indsat her dynamisk -->
       </section>
     </main>
